# University

BD/12/: pg_env.bat
BD/12/data/: current_logfiles  postgresql.conf  postmaster.opts  postmaster.pid
BD/12/data/global/: 1214  1232  1233  1260  1262  2671  2672  2676  2677  config_exec_params  pg_control  pg_internal.init
BD/12/data/pg_stat_tmp/: db_0.stat  db_13318.stat  db_16394.stat  db_16395.stat  global.stat
BD/12/pgAdmin 4/web/: config_distro.py
BD/12/scripts/: runpsql.bat  serverctl.vbs
BD/PL/: Universidade_E-R.erdplus
CLion/2020/AED1/: CMakeLists.txt  main.c
CLion/2020/AED1/data/: my10ints.txt
CLion/2020/AED1/libs_src/: lib_util.c
CLion/2020/AED1/pr/: pr00.c  pr00.h  pr01.c  pr01.h  pr02.c  pr02.h  pr03.c  pr03.h  pr04.c  pr04.h  pr04_1.c  pr04_1.h  pr06.c  pr06.h  pr07.c  pr07.h  quickFind.c  quickFind.h  quickUnion.c  quickUnion.h
CLion/2020/LP1/: CMakeLists.txt  main.c
CLion/2020/LP1/data/: students.txt
CLion/2020/LP1/pr/: pr01.c  pr02.c  pr02.h  pr03.c  pr03.h  pr04.c  pr04.h  pr05.c  pr05.h  pr06.c  pr06.h  pr09.c  pr09.h  pr10.c  pr10.h  pr11.c  pr11.h  pr12.c  pr12.h  pr13.c  pr13.h
CLion/2020/LP1/tp/: tp02.c  tp02.h  tp03.c  tp03.h  tp04.c  tp04.h  tp05.c  tp05.h  tp06.c  tp06.h  tp07e08.c  tp07e08.h  tp09.c  tp09.h  tp11.c  tp12.c  tp12.h  tp13.c  tp13.h
CLion/2020/PortoFlats/: CMakeLists.txt
CLion/2020/WORKSPACE/: CMakeLists.txt  CallFunctions.h  main.c
IntelliJ/2020/: IdeaProjects.rar
IntelliJ/2020/AED2_1920/data/: EASYQUTION.txt  cidades.txt  exemplo.txt  f7_ex19.txt  large.txt  notas_qualitativas.txt  pessoas.txt  (+4 more)
(+68 files in other folders)
